<resources>
    <string name="app_name">Firebase-Authentication- App-tk4</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="password">password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Password">Password</string>
    <string name="Registration_Page">Registration Page</string>
    <string name="username">username</string>
    <string name="Email_gmail_com">email@gmail.com</string>
    <string name="confirm_password">confirm_password</string>
</resources>