<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registration_Page"
        android:textStyle="bold|italic"

        android:textSize="30sp"

        app:layout_constraintBottom_toTopOf="@+id/edUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"

        app:layout_constraintBottom_toTopOf="@+id/edEmails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/edEmails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Email_gmail_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"

        app:layout_constraintBottom_toTopOf="@+id/edPasswordReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/edPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"

        app:layout_constraintBottom_toTopOf="@+id/edPasswordReg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/edPasswordReg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="100dp"
        android:minHeight="48dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:textColorHint="#546E7A"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="468dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/register_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGISTER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordReg2"
        app:layout_constraintVertical_bias="0.364" />



</androidx.constraintlayout.widget.ConstraintLayout>